--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li class="active"><a href="/index/">Home</a></li>
+        <li><a href="/article/list">About</a></li>
+        <li><a href="/">Gallery</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
