--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/index/">Home</a></li>
         <li><a href="/article/list">About</a></li>
-        <li><a href="/">Gallery</a></li>
+        <li><a href="/article/write">Gallery</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
