--- a/templates/delete_success.html
+++ b/templates/delete_success.html
@@ -4,6 +4,7 @@
 <div class="jumbotron">
   <div class="container text-center">
     <h1>글 삭제가 완료되었습니다.</h1>
+    <a href='/article/list/' class="btn btn-default" id="list">목록</a>
   </div>
 </div>
 
