--- a/templates/base.html
+++ b/templates/base.html
@@ -31,13 +31,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Portfolio</a>
+      <a class="navbar-brand" href="/index/">Portfolio</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/index/">Home</a></li>
-        <li><a href="/article/list">About</a></li>
-        <li><a href="/article/write">Gallery</a></li>
+        <li><a href="/article/list">게시글</a></li>
+        <li><a href="/article/write">글작성</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
