--- a/templates/list.html
+++ b/templates/list.html
@@ -6,20 +6,36 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          <th>번호</th><th>제목</th><th>작성자</th>
+        
+          <th>번호</th>
+          <th>제목</th>
+          <th>작성자</th>
         </tr>
       </thead>
       <tbody>
         {% for article in article_list %}
-        <tr>
-          <td>{{ article.title }}</td>
-          <td>{{ article.content }}</td>
-          <td>{{ article.user.name }}</td>
-        </tr>
+        <div >
+          <tr onclick="detail(event)">
+            <td class = '{{article.id}}'>{{ article.id }}</td>
+   
+            <td class = '{{article.id}}'>{{ article.content }}</td>
+            <td class = '{{article.id}}'>{{ article.user.name }}</td>
+          </tr>
+        </div>
         {% endfor %}
       </tbody>
     </table>
+    {% for i in page_info %} 
+    <a href="/article/list/?page={{i}}">{{i}}</a>
+    {% endfor %}
   </div>
 </div>
+<script>
+  function detail(e) {
+    id = e.target.getAttribute('class')
+    console.log(id)
+    location = `/article/detail/${id}/`;
+  }
+</script>
 
 {% endblock %}
